Fixed overflow issue in Login page and LoadingScreen

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,5 +1,5 @@
 .card-container {
-    
+    font-size: 10px;
 }
 
 .card-container:hover {
