--- a/src/Pages/GeneralPages/Login/Login.css
+++ b/src/Pages/GeneralPages/Login/Login.css
@@ -10,6 +10,8 @@
     align-items: center;
     justify-content: center;
     z-index: -1;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .loading-screen-layer {
@@ -17,6 +19,10 @@
     top: 0;
     left: 0;
     z-index: 1000;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .background-image {
